--- a/nginx/conf.d/app.conf.example
+++ b/nginx/conf.d/app.conf.example
@@ -1,6 +1,6 @@
-upstream  pa-app-backend  {
-    server  pa-app:9000;
-    server  pa-app1:9000;
+upstream  gbn-app-backend  {
+    server  gbn-app:9000;
+    server  gbn-app1:9000;
     # Add more servers if needed
     # server additional_server_ip:port;
 }
@@ -23,10 +23,10 @@ map $http_upgrade $connection_upgrade {
 #     }
 #     location  ~  \.php$  {
 #         try_files  $uri  /index.php  =404;
-#         fastcgi_pass  pa-app-backend;
+#         fastcgi_gbnss  gbn-app-backend;
 #         fastcgi_index  index.php;
-#         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-#         include  fastcgi_params;
+#         fastcgi_gbnram  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+#         include  fastcgi_gbnrams;
 #     }
 #     # Disable access to sensitive files
 #     location  ~  /\.env  {
@@ -64,7 +64,7 @@ map $http_upgrade $connection_upgrade {
 # Swoole Setup
 server {
     listen 8002;
-    server_name  pa.test;
+    server_name  gbn.test;
     root /var/www/public;
     index index.php;
 
@@ -102,7 +102,7 @@ server {
         # IF https
         # proxy_set_header HTTPS "on";
 
-        proxy_pass http://pa-app-backend$suffix;
+        proxy_gbnss http://gbn-app-backend$suffix;
     }
 
     # Enable Gzip compression for specific content types including JSON
